--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: Sleuth2
 Title: Data sets from Ramsey and Schafer's "Statistical Sleuth (2nd ed)"
-Version: 0.8
-Date: 2009-11-09
+Version: 1.0-0
+Date: 2009-11-12
 Author:  Original by F.L. Ramsey and D.W. Schafer,
     modifications by Daniel W Schafer, Jeannie Sifneos and Berwin A Turlach
 Description: Data sets from Ramsey, F.L. and Schafer, D.W. (2002), "The
