--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: Sleuth2
 Title: Data sets from Ramsey and Schafer's "Statistical Sleuth (2nd ed)"
-Version: 1.0-1
-Date: 2009-12-03
+Version: 1.0-2
+Date: 2010-10-10
 Author:  Original by F.L. Ramsey and D.W. Schafer,
     modifications by Daniel W Schafer, Jeannie Sifneos and Berwin A Turlach
 Description: Data sets from Ramsey, F.L. and Schafer, D.W. (2002), "The
@@ -10,5 +10,6 @@ Description: Data sets from Ramsey, F.L. and Schafer, D.W. (2002), "The
 Maintainer: Berwin A Turlach <berwin@maths.uwa.edu.au>
 LazyData: yes
 Depends: R (>= 2.6.0)
+Suggests: lattice
 License: GPL (>= 2)
 URL: http://r-forge.r-project.org/projects/sleuth2/
