--- a/pkg/Sleuth2/DESCRIPTION
+++ b/pkg/Sleuth2/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: Sleuth2
 Title: Data sets from Ramsey and Schafer's "Statistical Sleuth (2nd ed)"
-Version: 1.0-4
-Date: 2011-11-01
+Version: 1.0-5
+Date: 2012-04-25
 Author:  Original by F.L. Ramsey and D.W. Schafer,
-    modifications by Daniel W Schafer, Jeannie Sifneos and Berwin A Turlach
+    modifications by Daniel W. Schafer, Jeannie Sifneos and Berwin A. Turlach
 Description: Data sets from Ramsey, F.L. and Schafer, D.W. (2002), "The
     Statistical Sleuth: A Course in Methods of Data Analysis (2nd ed)"
     Duxbury. 
