--- a/pkg/Sleuth3/DESCRIPTION
+++ b/pkg/Sleuth3/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: Sleuth3
 Title: Data sets from Ramsey and Schafer's "Statistical Sleuth (3rd ed)"
-Version: 0.0-3
-Date: 2012-06-22
+Version: 0.0-4
+Date: 2012-06-24
 Author:  Original by F.L. Ramsey and D.W. Schafer,
     modifications by Daniel W. Schafer, Jeannie Sifneos and Berwin A. Turlach
 Description: Data sets from Ramsey, F.L. and Schafer, D.W. (2012), "The
@@ -9,7 +9,7 @@ Description: Data sets from Ramsey, F.L. and Schafer, D.W. (2012), "The
     ed)", Duxbury. 
 Maintainer: Berwin A Turlach <Berwin.Turlach@gmail.com>
 LazyData: yes
-Depends: R (>= 2.12.0), multcomp
-Suggests: lattice
+Depends: R (>= 2.12.0)
+Suggests: lattice, multcomp
 License: GPL (>= 2)
 URL: http://r-forge.r-project.org/projects/sleuth2/
