--- a/pkg/Sleuth3/DESCRIPTION
+++ b/pkg/Sleuth3/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: Sleuth3
 Title: Data sets from Ramsey and Schafer's "Statistical Sleuth (3rd ed)"
-Version: 0.0-4
-Date: 2012-06-24
+Version: 0.0-5
+Date: 2012-08-03
 Author:  Original by F.L. Ramsey and D.W. Schafer,
     modifications by Daniel W. Schafer, Jeannie Sifneos and Berwin A. Turlach
-Description: Data sets from Ramsey, F.L. and Schafer, D.W. (2012), "The
+Description: Data sets from Ramsey, F.L. and Schafer, D.W. (2013), "The
     Statistical Sleuth: A Course in Methods of Data Analysis (3rd
-    ed)", Duxbury. 
+    ed)", Cengage Learning. 
 Maintainer: Berwin A Turlach <Berwin.Turlach@gmail.com>
 LazyData: yes
 Depends: R (>= 2.12.0)
-Suggests: lattice, multcomp
+Suggests: lattice, multcomp, car, leaps
 License: GPL (>= 2)
 URL: http://r-forge.r-project.org/projects/sleuth2/
