--- a/pkg/Sleuth2/DESCRIPTION
+++ b/pkg/Sleuth2/DESCRIPTION
@@ -1,15 +1,17 @@
 Package: Sleuth2
 Title: Data sets from Ramsey and Schafer's "Statistical Sleuth (2nd ed)"
-Version: 1.0-7
-Date: 2012-09-02
+Version: 2.0-1
+Date: 2012-09-16
 Author:  Original by F.L. Ramsey and D.W. Schafer,
-    modifications by Daniel W. Schafer, Jeannie Sifneos and Berwin A. Turlach
+    modifications by Daniel W. Schafer, Jeannie Sifneos and Berwin
+    A. Turlach, vignettes contributed by Nicholas Horton, Kate Aloisio
+    and Ruobing Zhang 
 Description: Data sets from Ramsey, F.L. and Schafer, D.W. (2002), "The
     Statistical Sleuth: A Course in Methods of Data Analysis (2nd
     ed)", Duxbury. 
 Maintainer: Berwin A Turlach <Berwin.Turlach@gmail.com>
 LazyData: yes
-Depends: R (>= 2.12.0)
+Depends: R (>= 2.15.0)
 Suggests: lattice
 License: GPL (>= 2)
 URL: http://r-forge.r-project.org/projects/sleuth2/
