--- a/pkg/Sleuth3/DESCRIPTION
+++ b/pkg/Sleuth3/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: Sleuth3
-Title: Data sets from Ramsey and Schafer's "Statistical Sleuth (3rd ed)"
-Version: 0.1-7
-Date: 2015-01-22
+Title: Data Sets from Ramsey and Schafer's "Statistical Sleuth (3rd Ed)"
+Version: 0.1-8
+Date: 2015-02-16
 Author:  Original by F.L. Ramsey and D.W. Schafer, 
     modifications by Daniel W. Schafer, Jeannie Sifneos and Berwin A. Turlach
 Description: Data sets from Ramsey, F.L. and Schafer, D.W. (2013), "The
