--- a/pkg/Sleuth2/DESCRIPTION
+++ b/pkg/Sleuth2/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: Sleuth2
-Title: Data sets from Ramsey and Schafer's "Statistical Sleuth (2nd ed)"
-Version: 2.0-1
-Date: 2012-09-16
+Title: Data Sets from Ramsey and Schafer's "Statistical Sleuth (2nd Ed)"
+Version: 2.0-2
+Date: 2016-01-01
 Author:  Original by F.L. Ramsey and D.W. Schafer,
     modifications by Daniel W. Schafer, Jeannie Sifneos and Berwin
     A. Turlach, vignettes contributed by Nicholas Horton, Kate Aloisio
@@ -11,7 +11,8 @@ Description: Data sets from Ramsey, F.L. and Schafer, D.W. (2002), "The
     ed)", Duxbury. 
 Maintainer: Berwin A Turlach <Berwin.Turlach@gmail.com>
 LazyData: yes
-Depends: R (>= 2.15.0)
-Suggests: lattice
+Depends: R (>= 3.2.0)
+Suggests: lattice, knitr, MASS, agricolae, car, gmodels, leaps, mosaic
+VignetteBuilder: knitr
 License: GPL (>= 2)
 URL: http://r-forge.r-project.org/projects/sleuth2/
