--- a/pkg/Sleuth3/DESCRIPTION
+++ b/pkg/Sleuth3/DESCRIPTION
@@ -1,15 +1,18 @@
 Package: Sleuth3
 Title: Data Sets from Ramsey and Schafer's "Statistical Sleuth (3rd Ed)"
-Version: 0.1-8
-Date: 2015-02-16
+Version: 1.0-1
+Date: 2016-01-02
 Author:  Original by F.L. Ramsey and D.W. Schafer, 
-    modifications by Daniel W. Schafer, Jeannie Sifneos and Berwin A. Turlach
+    modifications by Daniel W. Schafer, Jeannie Sifneos and Berwin
+    A. Turlach, vignettes contributed by Nicholas Horton, Linda Loi,
+    Kate Aloisio and Ruobing Zhang 
 Description: Data sets from Ramsey, F.L. and Schafer, D.W. (2013), "The
     Statistical Sleuth: A Course in Methods of Data Analysis (3rd
     ed)", Cengage Learning. 
 Maintainer: Berwin A Turlach <Berwin.Turlach@gmail.com>
 LazyData: yes
-Depends: R (>= 3.0.0)
-Suggests: MASS, lattice, multcomp, car, leaps, CCA, Hmisc
+Depends: R (>= 3.1.0)
+Suggests: CCA, Hmisc, MASS,agricolae, car, gmodels, knitr, lattice, leaps, mosaic, multcomp
+VignetteBuilder: knitr
 License: GPL (>= 2)
 URL: http://r-forge.r-project.org/projects/sleuth2/
