--- a/pkg/Sleuth2/DESCRIPTION
+++ b/pkg/Sleuth2/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: Sleuth2
 Title: Data Sets from Ramsey and Schafer's "Statistical Sleuth (2nd Ed)"
-Version: 2.0-3
-Date: 2016-01-02
-Author:  Original by F.L. Ramsey and D.W. Schafer,
+Version: 2.0-4
+Date: 2016-06-15
+Author:  Original by F.L. Ramsey and D.W. Schafer;
     modifications by Daniel W. Schafer, Jeannie Sifneos and Berwin
-    A. Turlach, vignettes contributed by Nicholas Horton, Kate Aloisio
-    and Ruobing Zhang 
+    A. Turlach; vignettes contributed by Nicholas Horton, Kate Aloisio
+    and Ruobing Zhang, with corrections by Randall Pruim
 Description: Data sets from Ramsey, F.L. and Schafer, D.W. (2002), "The
     Statistical Sleuth: A Course in Methods of Data Analysis (2nd
     ed)", Duxbury. 
